--- a/Yummie/ViewControllers/Xibs/CollectionViewCell/Food Category/FoodCategoryCollectionViewCell.xib
+++ b/Yummie/ViewControllers/Xibs/CollectionViewCell/Food Category/FoodCategoryCollectionViewCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,62 +12,101 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="FoodCategoryCollectionViewCell" customModule="Yummie" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="245" height="68"/>
+        <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="FoodCategoryCollectionViewCell" customModule="Yummie" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="150" height="50"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="245" height="68"/>
+                <rect key="frame" x="0.0" y="0.0" width="150" height="50"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YbG-oh-yAc">
-                        <rect key="frame" x="0.0" y="0.0" width="245" height="68"/>
+                        <rect key="frame" x="0.0" y="0.0" width="150" height="50"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="LJe-tL-Tuk">
-                                <rect key="frame" x="0.0" y="0.0" width="245" height="68"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="LJe-tL-Tuk">
+                                <rect key="frame" x="0.0" y="0.0" width="150" height="50"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="o9G-gQ-Gbh">
-                                        <rect key="frame" x="8" y="8" width="50" height="52"/>
+                                        <rect key="frame" x="8" y="8" width="50" height="34"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" secondItem="o9G-gQ-Gbh" secondAttribute="height" multiplier="25:26" id="OLm-tl-KZG"/>
-                                            <constraint firstAttribute="width" constant="50" id="cIV-Zn-jJH"/>
+                                            <constraint firstAttribute="width" secondItem="o9G-gQ-Gbh" secondAttribute="height" multiplier="25:17" id="L9A-8o-d94"/>
+                                            <constraint firstAttribute="width" constant="50" id="tcQ-bT-yYb"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JTH-8J-Yem">
-                                        <rect key="frame" x="73" y="8" width="164" height="52"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <rect key="frame" x="63" y="8" width="87" height="34"/>
+                                        <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="16"/>
+                                        <color key="textColor" name="3D3C52"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="8" bottom="8" trailing="8"/>
+                                <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="8" bottom="8" trailing="0.0"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                        <size key="value" width="1" height="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                        <color key="value" name="FFFFFF"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="LJe-tL-Tuk" firstAttribute="leading" secondItem="YbG-oh-yAc" secondAttribute="leading" id="5mh-0r-F1g"/>
                             <constraint firstItem="LJe-tL-Tuk" firstAttribute="top" secondItem="YbG-oh-yAc" secondAttribute="top" id="IpL-i0-zBu"/>
+                            <constraint firstAttribute="width" constant="150" id="b3y-ln-7Ez"/>
                             <constraint firstAttribute="trailing" secondItem="LJe-tL-Tuk" secondAttribute="trailing" id="cfA-Vh-DgQ"/>
                             <constraint firstAttribute="bottom" secondItem="LJe-tL-Tuk" secondAttribute="bottom" id="ePe-wO-NOr"/>
+                            <constraint firstAttribute="height" constant="50" id="hKd-Sq-XZQ"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="10"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                <color key="value" name="F9E293"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                <size key="value" width="1" height="1"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                <real key="value" value="1"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="YbG-oh-yAc" secondAttribute="trailing" id="bL7-XI-DNC"/>
-                <constraint firstAttribute="bottom" secondItem="YbG-oh-yAc" secondAttribute="bottom" id="toG-qB-Ovz"/>
-                <constraint firstItem="YbG-oh-yAc" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="w7b-CB-jyV"/>
-                <constraint firstItem="YbG-oh-yAc" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="xUF-eP-wte"/>
+                <constraint firstAttribute="bottom" secondItem="YbG-oh-yAc" secondAttribute="bottom" id="1ji-Ow-LKQ"/>
+                <constraint firstItem="YbG-oh-yAc" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="MS9-zg-Ha9"/>
+                <constraint firstAttribute="trailing" secondItem="YbG-oh-yAc" secondAttribute="trailing" id="X7G-Zg-RpQ"/>
+                <constraint firstItem="YbG-oh-yAc" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="cge-Ua-ECe"/>
             </constraints>
-            <size key="customSize" width="245" height="68"/>
+            <size key="customSize" width="150" height="50"/>
             <connections>
                 <outlet property="imageView" destination="o9G-gQ-Gbh" id="y2a-JU-PFI"/>
                 <outlet property="lblTitle" destination="JTH-8J-Yem" id="dIx-sT-Qg3"/>
             </connections>
-            <point key="canvasLocation" x="95.419847328244273" y="4.9295774647887329"/>
+            <point key="canvasLocation" x="69" y="-1"/>
         </collectionViewCell>
     </objects>
     <resources>
+        <namedColor name="3D3C52">
+            <color red="0.23899999260902405" green="0.23499999940395355" blue="0.32199999690055847" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="F9E293">
+            <color red="0.97600001096725464" green="0.88599997758865356" blue="0.57599997520446777" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="FFFFFF">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
