--- a/Yummie/Storyboards/Base.lproj/Main.storyboard
+++ b/Yummie/Storyboards/Base.lproj/Main.storyboard
@@ -331,16 +331,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="dXA-fT-KfZ">
-                                <rect key="frame" x="0.0" y="50" width="375" height="693.66666666666663"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="756.66666666666663"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bgBurger" translatesAutoresizingMaskIntoConstraints="NO" id="vtK-jG-Jyk">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="400"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bgBurger" translatesAutoresizingMaskIntoConstraints="NO" id="vtK-jG-Jyk">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="500"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="400" id="CLU-Vh-LAF"/>
+                                            <constraint firstAttribute="height" constant="500" id="CLU-Vh-LAF"/>
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="7PL-I9-P4G">
-                                        <rect key="frame" x="0.0" y="415" width="375" height="278.66666666666674"/>
+                                        <rect key="frame" x="0.0" y="515" width="375" height="241.66666666666663"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lyi-c3-42Y">
                                                 <rect key="frame" x="15" y="0.0" width="345" height="20.333333333333332"/>
@@ -360,10 +360,9 @@
                                                 </subviews>
                                             </stackView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5as-dP-zKY">
-                                                <rect key="frame" x="15" y="35.333333333333307" width="345" height="108.33333333333331"/>
+                                                <rect key="frame" x="15" y="35.333333333333364" width="345" height="71.333333333333314"/>
                                                 <attributedString key="attributedText">
-                                                    <fragment>
-                                                        <string key="content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</string>
+                                                    <fragment content="ustry's standard dummy text ever since the 1500s">
                                                         <attributes>
                                                             <color key="NSColor" name="BABABA"/>
                                                             <font key="NSFont" metaFont="system"/>
@@ -373,7 +372,7 @@
                                                     <fragment content="،">
                                                         <attributes>
                                                             <color key="NSColor" name="BABABA"/>
-                                                            <font key="NSFont" metaFont="system"/>
+                                                            <font key="NSFont" size="13" name=".SFArabic-Regular"/>
                                                             <font key="NSOriginalFont" metaFont="system"/>
                                                             <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="truncatingTail" baseWritingDirection="natural" lineSpacing="3" tighteningFactorForTruncation="0.0"/>
                                                         </attributes>
@@ -390,7 +389,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bk8-Kj-9YY">
-                                                <rect key="frame" x="15" y="158.66666666666663" width="345" height="45"/>
+                                                <rect key="frame" x="15" y="121.66666666666663" width="345" height="45"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="45" id="sxk-Hj-xAT"/>
                                                 </constraints>
@@ -398,7 +397,7 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R5c-2i-LnU">
-                                                <rect key="frame" x="15" y="218.66666666666663" width="345" height="45"/>
+                                                <rect key="frame" x="15" y="181.66666666666663" width="345" height="45"/>
                                                 <color key="backgroundColor" red="0.26666668059999998" green="0.27450981740000002" blue="0.32941177490000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="45" id="ycB-Pl-AmV"/>
@@ -421,7 +420,7 @@
                         <viewLayoutGuide key="safeArea" id="d6s-TV-ahL"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="dXA-fT-KfZ" firstAttribute="top" secondItem="d6s-TV-ahL" secondAttribute="top" id="5Ga-kJ-XV2"/>
+                            <constraint firstItem="dXA-fT-KfZ" firstAttribute="top" secondItem="6To-8E-Bef" secondAttribute="top" id="5Ga-kJ-XV2"/>
                             <constraint firstItem="d6s-TV-ahL" firstAttribute="trailing" secondItem="dXA-fT-KfZ" secondAttribute="trailing" id="hQc-Yc-4r8"/>
                             <constraint firstItem="dXA-fT-KfZ" firstAttribute="leading" secondItem="d6s-TV-ahL" secondAttribute="leading" id="qKa-jY-6rv"/>
                         </constraints>
